src/cool_parser/output_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     epsilon -> <empty>
Rule 3     class_list -> def_class class_list
Rule 4     class_list -> def_class
Rule 5     class_list -> error class_list
Rule 6     def_class -> class type ocur feature_list ccur semi
Rule 7     def_class -> class type inherits type ocur feature_list ccur semi
Rule 8     def_class -> class error ocur feature_list ccur semi
Rule 9     def_class -> class error inherits type ocur feature_list ccur semi
Rule 10    def_class -> class error inherits error ocur feature_list ccur semi
Rule 11    def_class -> class type inherits error ocur feature_list ccur semi
Rule 12    feature_list -> epsilon
Rule 13    feature_list -> def_attr semi feature_list
Rule 14    feature_list -> def_func semi feature_list
Rule 15    feature_list -> error feature_list
Rule 16    def_attr -> id colon type
Rule 17    def_attr -> id colon type larrow expr
Rule 18    def_attr -> error colon type
Rule 19    def_attr -> id colon error
Rule 20    def_attr -> error colon type larrow expr
Rule 21    def_attr -> id colon error larrow expr
Rule 22    def_attr -> id colon type larrow error
Rule 23    def_func -> id opar formals cpar colon type ocur expr ccur
Rule 24    def_func -> error opar formals cpar colon type ocur expr ccur
Rule 25    def_func -> id opar error cpar colon type ocur expr ccur
Rule 26    def_func -> id opar formals cpar colon error ocur expr ccur
Rule 27    def_func -> id opar formals cpar colon type ocur error ccur
Rule 28    formals -> param_list
Rule 29    formals -> param_list_empty
Rule 30    param_list -> param
Rule 31    param_list -> param comma param_list
Rule 32    param_list -> error param_list
Rule 33    param_list_empty -> epsilon
Rule 34    param -> id colon type
Rule 35    expr -> let let_list in expr
Rule 36    expr -> let error in expr
Rule 37    expr -> let let_list in error
Rule 38    expr -> case expr of cases_list esac
Rule 39    expr -> case error of cases_list esac
Rule 40    expr -> case expr of error esac
Rule 41    expr -> if expr then expr else expr fi
Rule 42    expr -> if error then expr else expr fi
Rule 43    expr -> if expr then error else expr fi
Rule 44    expr -> if expr then expr else error fi
Rule 45    expr -> while expr loop expr pool
Rule 46    expr -> while error loop expr pool
Rule 47    expr -> while expr loop error pool
Rule 48    expr -> while expr loop expr error
Rule 49    expr -> arith
Rule 50    let_list -> let_assign
Rule 51    let_list -> let_assign comma let_list
Rule 52    let_list -> error let_list
Rule 53    let_assign -> param larrow expr
Rule 54    let_assign -> param
Rule 55    cases_list -> casep semi
Rule 56    cases_list -> casep semi cases_list
Rule 57    cases_list -> error cases_list
Rule 58    casep -> id colon type rarrow expr
Rule 59    arith -> id larrow expr
Rule 60    arith -> not comp
Rule 61    arith -> comp
Rule 62    comp -> comp less op
Rule 63    comp -> comp lesseq op
Rule 64    comp -> comp equal op
Rule 65    comp -> op
Rule 66    op -> op plus term
Rule 67    op -> op minus term
Rule 68    op -> term
Rule 69    term -> term star base_call
Rule 70    term -> term div base_call
Rule 71    term -> isvoid base_call
Rule 72    term -> nox base_call
Rule 73    term -> base_call
Rule 74    base_call -> factor arroba type dot func_call
Rule 75    base_call -> factor
Rule 76    factor -> atom
Rule 77    factor -> opar expr cpar
Rule 78    factor -> factor dot func_call
Rule 79    factor -> func_call
Rule 80    atom -> num
Rule 81    atom -> id
Rule 82    atom -> new type
Rule 83    atom -> new error
Rule 84    atom -> ocur block ccur
Rule 85    atom -> true
Rule 86    atom -> false
Rule 87    atom -> string
Rule 88    block -> expr semi
Rule 89    block -> expr semi block
Rule 90    block -> error block
Rule 91    block -> error
Rule 92    func_call -> id opar args cpar
Rule 93    args -> arg_list
Rule 94    args -> arg_list_empty
Rule 95    arg_list -> expr
Rule 96    arg_list -> expr comma arg_list
Rule 97    arg_list -> error arg_list
Rule 98    arg_list_empty -> epsilon

Terminals, with rules where they appear

arroba               : 74
case                 : 38 39 40
ccur                 : 6 7 8 9 10 11 23 24 25 26 27 84
class                : 6 7 8 9 10 11
colon                : 16 17 18 19 20 21 22 23 24 25 26 27 34 58
comma                : 31 51 96
cpar                 : 23 24 25 26 27 77 92
div                  : 70
dot                  : 74 78
else                 : 41 42 43 44
equal                : 64
error                : 5 8 9 10 10 11 15 18 19 20 21 22 24 25 26 27 32 36 37 39 40 42 43 44 46 47 48 52 57 83 90 91 97
esac                 : 38 39 40
false                : 86
fi                   : 41 42 43 44
id                   : 16 17 19 21 22 23 25 26 27 34 58 59 81 92
if                   : 41 42 43 44
in                   : 35 36 37
inherits             : 7 9 10 11
isvoid               : 71
larrow               : 17 20 21 22 53 59
less                 : 62
lesseq               : 63
let                  : 35 36 37
loop                 : 45 46 47 48
minus                : 67
new                  : 82 83
not                  : 60
nox                  : 72
num                  : 80
ocur                 : 6 7 8 9 10 11 23 24 25 26 27 84
of                   : 38 39 40
opar                 : 23 24 25 26 27 77 92
plus                 : 66
pool                 : 45 46 47
rarrow               : 58
semi                 : 6 7 8 9 10 11 13 14 55 56 88 89
star                 : 69
string               : 87
then                 : 41 42 43 44
true                 : 85
type                 : 6 7 7 9 11 16 17 18 20 22 23 24 25 27 34 58 74 82
while                : 45 46 47 48

Nonterminals, with rules where they appear

arg_list             : 93 96 97
arg_list_empty       : 94
args                 : 92
arith                : 49
atom                 : 76
base_call            : 69 70 71 72 73
block                : 84 89 90
casep                : 55 56
cases_list           : 38 39 56 57
class_list           : 1 3 5
comp                 : 60 61 62 63 64
def_attr             : 13
def_class            : 3 4
def_func             : 14
epsilon              : 12 33 98
expr                 : 17 20 21 23 24 25 26 35 36 38 40 41 41 41 42 42 43 43 44 44 45 45 46 47 48 48 53 58 59 77 88 89 95 96
factor               : 74 75 78
feature_list         : 6 7 8 9 10 11 13 14 15
formals              : 23 24 26 27
func_call            : 74 78 79
let_assign           : 50 51
let_list             : 35 37 51 52
op                   : 62 63 64 65 66 67
param                : 30 31 53 54
param_list           : 28 31 32
param_list_empty     : 29
program              : 0
term                 : 66 67 68 69 70

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (3) class_list -> . def_class class_list
    (4) class_list -> . def_class
    (5) class_list -> . error class_list
    (6) def_class -> . class type ocur feature_list ccur semi
    (7) def_class -> . class type inherits type ocur feature_list ccur semi
    (8) def_class -> . class error ocur feature_list ccur semi
    (9) def_class -> . class error inherits type ocur feature_list ccur semi
    (10) def_class -> . class error inherits error ocur feature_list ccur semi
    (11) def_class -> . class type inherits error ocur feature_list ccur semi

    error           shift and go to state 4
    class           shift and go to state 5

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    def_class                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .

    $end            reduce using rule 1 (program -> class_list .)


state 3

    (3) class_list -> def_class . class_list
    (4) class_list -> def_class .
    (3) class_list -> . def_class class_list
    (4) class_list -> . def_class
    (5) class_list -> . error class_list
    (6) def_class -> . class type ocur feature_list ccur semi
    (7) def_class -> . class type inherits type ocur feature_list ccur semi
    (8) def_class -> . class error ocur feature_list ccur semi
    (9) def_class -> . class error inherits type ocur feature_list ccur semi
    (10) def_class -> . class error inherits error ocur feature_list ccur semi
    (11) def_class -> . class type inherits error ocur feature_list ccur semi

    $end            reduce using rule 4 (class_list -> def_class .)
    error           shift and go to state 4
    class           shift and go to state 5

    def_class                      shift and go to state 3
    class_list                     shift and go to state 6

state 4

    (5) class_list -> error . class_list
    (3) class_list -> . def_class class_list
    (4) class_list -> . def_class
    (5) class_list -> . error class_list
    (6) def_class -> . class type ocur feature_list ccur semi
    (7) def_class -> . class type inherits type ocur feature_list ccur semi
    (8) def_class -> . class error ocur feature_list ccur semi
    (9) def_class -> . class error inherits type ocur feature_list ccur semi
    (10) def_class -> . class error inherits error ocur feature_list ccur semi
    (11) def_class -> . class type inherits error ocur feature_list ccur semi

    error           shift and go to state 4
    class           shift and go to state 5

    class_list                     shift and go to state 7
    def_class                      shift and go to state 3

state 5

    (6) def_class -> class . type ocur feature_list ccur semi
    (7) def_class -> class . type inherits type ocur feature_list ccur semi
    (8) def_class -> class . error ocur feature_list ccur semi
    (9) def_class -> class . error inherits type ocur feature_list ccur semi
    (10) def_class -> class . error inherits error ocur feature_list ccur semi
    (11) def_class -> class . type inherits error ocur feature_list ccur semi

    type            shift and go to state 8
    error           shift and go to state 9


state 6

    (3) class_list -> def_class class_list .

    $end            reduce using rule 3 (class_list -> def_class class_list .)


state 7

    (5) class_list -> error class_list .

    $end            reduce using rule 5 (class_list -> error class_list .)


state 8

    (6) def_class -> class type . ocur feature_list ccur semi
    (7) def_class -> class type . inherits type ocur feature_list ccur semi
    (11) def_class -> class type . inherits error ocur feature_list ccur semi

    ocur            shift and go to state 10
    inherits        shift and go to state 11


state 9

    (8) def_class -> class error . ocur feature_list ccur semi
    (9) def_class -> class error . inherits type ocur feature_list ccur semi
    (10) def_class -> class error . inherits error ocur feature_list ccur semi

    ocur            shift and go to state 12
    inherits        shift and go to state 13


state 10

    (6) def_class -> class type ocur . feature_list ccur semi
    (12) feature_list -> . epsilon
    (13) feature_list -> . def_attr semi feature_list
    (14) feature_list -> . def_func semi feature_list
    (15) feature_list -> . error feature_list
    (2) epsilon -> .
    (16) def_attr -> . id colon type
    (17) def_attr -> . id colon type larrow expr
    (18) def_attr -> . error colon type
    (19) def_attr -> . id colon error
    (20) def_attr -> . error colon type larrow expr
    (21) def_attr -> . id colon error larrow expr
    (22) def_attr -> . id colon type larrow error
    (23) def_func -> . id opar formals cpar colon type ocur expr ccur
    (24) def_func -> . error opar formals cpar colon type ocur expr ccur
    (25) def_func -> . id opar error cpar colon type ocur expr ccur
    (26) def_func -> . id opar formals cpar colon error ocur expr ccur
    (27) def_func -> . id opar formals cpar colon type ocur error ccur

    error           shift and go to state 18
    ccur            reduce using rule 2 (epsilon -> .)
    id              shift and go to state 19

    feature_list                   shift and go to state 14
    epsilon                        shift and go to state 15
    def_attr                       shift and go to state 16
    def_func                       shift and go to state 17

state 11

    (7) def_class -> class type inherits . type ocur feature_list ccur semi
    (11) def_class -> class type inherits . error ocur feature_list ccur semi

    type            shift and go to state 20
    error           shift and go to state 21


state 12

    (8) def_class -> class error ocur . feature_list ccur semi
    (12) feature_list -> . epsilon
    (13) feature_list -> . def_attr semi feature_list
    (14) feature_list -> . def_func semi feature_list
    (15) feature_list -> . error feature_list
    (2) epsilon -> .
    (16) def_attr -> . id colon type
    (17) def_attr -> . id colon type larrow expr
    (18) def_attr -> . error colon type
    (19) def_attr -> . id colon error
    (20) def_attr -> . error colon type larrow expr
    (21) def_attr -> . id colon error larrow expr
    (22) def_attr -> . id colon type larrow error
    (23) def_func -> . id opar formals cpar colon type ocur expr ccur
    (24) def_func -> . error opar formals cpar colon type ocur expr ccur
    (25) def_func -> . id opar error cpar colon type ocur expr ccur
    (26) def_func -> . id opar formals cpar colon error ocur expr ccur
    (27) def_func -> . id opar formals cpar colon type ocur error ccur

    error           shift and go to state 18
    ccur            reduce using rule 2 (epsilon -> .)
    id              shift and go to state 19

    feature_list                   shift and go to state 22
    epsilon                        shift and go to state 15
    def_attr                       shift and go to state 16
    def_func                       shift and go to state 17

state 13

    (9) def_class -> class error inherits . type ocur feature_list ccur semi
    (10) def_class -> class error inherits . error ocur feature_list ccur semi

    type            shift and go to state 24
    error           shift and go to state 23


state 14

    (6) def_class -> class type ocur feature_list . ccur semi

    ccur            shift and go to state 25


state 15

    (12) feature_list -> epsilon .

    ccur            reduce using rule 12 (feature_list -> epsilon .)


state 16

    (13) feature_list -> def_attr . semi feature_list

    semi            shift and go to state 26


state 17

    (14) feature_list -> def_func . semi feature_list

    semi            shift and go to state 27


state 18

    (15) feature_list -> error . feature_list
    (18) def_attr -> error . colon type
    (20) def_attr -> error . colon type larrow expr
    (24) def_func -> error . opar formals cpar colon type ocur expr ccur
    (12) feature_list -> . epsilon
    (13) feature_list -> . def_attr semi feature_list
    (14) feature_list -> . def_func semi feature_list
    (15) feature_list -> . error feature_list
    (2) epsilon -> .
    (16) def_attr -> . id colon type
    (17) def_attr -> . id colon type larrow expr
    (18) def_attr -> . error colon type
    (19) def_attr -> . id colon error
    (20) def_attr -> . error colon type larrow expr
    (21) def_attr -> . id colon error larrow expr
    (22) def_attr -> . id colon type larrow error
    (23) def_func -> . id opar formals cpar colon type ocur expr ccur
    (24) def_func -> . error opar formals cpar colon type ocur expr ccur
    (25) def_func -> . id opar error cpar colon type ocur expr ccur
    (26) def_func -> . id opar formals cpar colon error ocur expr ccur
    (27) def_func -> . id opar formals cpar colon type ocur error ccur

    colon           shift and go to state 29
    opar            shift and go to state 30
    error           shift and go to state 18
    ccur            reduce using rule 2 (epsilon -> .)
    id              shift and go to state 19

    feature_list                   shift and go to state 28
    epsilon                        shift and go to state 15
    def_attr                       shift and go to state 16
    def_func                       shift and go to state 17

state 19

    (16) def_attr -> id . colon type
    (17) def_attr -> id . colon type larrow expr
    (19) def_attr -> id . colon error
    (21) def_attr -> id . colon error larrow expr
    (22) def_attr -> id . colon type larrow error
    (23) def_func -> id . opar formals cpar colon type ocur expr ccur
    (25) def_func -> id . opar error cpar colon type ocur expr ccur
    (26) def_func -> id . opar formals cpar colon error ocur expr ccur
    (27) def_func -> id . opar formals cpar colon type ocur error ccur

    colon           shift and go to state 31
    opar            shift and go to state 32


state 20

    (7) def_class -> class type inherits type . ocur feature_list ccur semi

    ocur            shift and go to state 33


state 21

    (11) def_class -> class type inherits error . ocur feature_list ccur semi

    ocur            shift and go to state 34


state 22

    (8) def_class -> class error ocur feature_list . ccur semi

    ccur            shift and go to state 35


state 23

    (10) def_class -> class error inherits error . ocur feature_list ccur semi

    ocur            shift and go to state 36


state 24

    (9) def_class -> class error inherits type . ocur feature_list ccur semi

    ocur            shift and go to state 37


state 25

    (6) def_class -> class type ocur feature_list ccur . semi

    semi            shift and go to state 38


state 26

    (13) feature_list -> def_attr semi . feature_list
    (12) feature_list -> . epsilon
    (13) feature_list -> . def_attr semi feature_list
    (14) feature_list -> . def_func semi feature_list
    (15) feature_list -> . error feature_list
    (2) epsilon -> .
    (16) def_attr -> . id colon type
    (17) def_attr -> . id colon type larrow expr
    (18) def_attr -> . error colon type
    (19) def_attr -> . id colon error
    (20) def_attr -> . error colon type larrow expr
    (21) def_attr -> . id colon error larrow expr
    (22) def_attr -> . id colon type larrow error
    (23) def_func -> . id opar formals cpar colon type ocur expr ccur
    (24) def_func -> . error opar formals cpar colon type ocur expr ccur
    (25) def_func -> . id opar error cpar colon type ocur expr ccur
    (26) def_func -> . id opar formals cpar colon error ocur expr ccur
    (27) def_func -> . id opar formals cpar colon type ocur error ccur

    error           shift and go to state 18
    ccur            reduce using rule 2 (epsilon -> .)
    id              shift and go to state 19

    def_attr                       shift and go to state 16
    feature_list                   shift and go to state 39
    epsilon                        shift and go to state 15
    def_func                       shift and go to state 17

state 27

    (14) feature_list -> def_func semi . feature_list
    (12) feature_list -> . epsilon
    (13) feature_list -> . def_attr semi feature_list
    (14) feature_list -> . def_func semi feature_list
    (15) feature_list -> . error feature_list
    (2) epsilon -> .
    (16) def_attr -> . id colon type
    (17) def_attr -> . id colon type larrow expr
    (18) def_attr -> . error colon type
    (19) def_attr -> . id colon error
    (20) def_attr -> . error colon type larrow expr
    (21) def_attr -> . id colon error larrow expr
    (22) def_attr -> . id colon type larrow error
    (23) def_func -> . id opar formals cpar colon type ocur expr ccur
    (24) def_func -> . error opar formals cpar colon type ocur expr ccur
    (25) def_func -> . id opar error cpar colon type ocur expr ccur
    (26) def_func -> . id opar formals cpar colon error ocur expr ccur
    (27) def_func -> . id opar formals cpar colon type ocur error ccur

    error           shift and go to state 18
    ccur            reduce using rule 2 (epsilon -> .)
    id              shift and go to state 19

    def_func                       shift and go to state 17
    feature_list                   shift and go to state 40
    epsilon                        shift and go to state 15
    def_attr                       shift and go to state 16

state 28

    (15) feature_list -> error feature_list .

    ccur            reduce using rule 15 (feature_list -> error feature_list .)


state 29

    (18) def_attr -> error colon . type
    (20) def_attr -> error colon . type larrow expr

    type            shift and go to state 41


state 30

    (24) def_func -> error opar . formals cpar colon type ocur expr ccur
    (28) formals -> . param_list
    (29) formals -> . param_list_empty
    (30) param_list -> . param
    (31) param_list -> . param comma param_list
    (32) param_list -> . error param_list
    (33) param_list_empty -> . epsilon
    (34) param -> . id colon type
    (2) epsilon -> .

    error           shift and go to state 42
    id              shift and go to state 48
    cpar            reduce using rule 2 (epsilon -> .)

    formals                        shift and go to state 43
    param_list                     shift and go to state 44
    param_list_empty               shift and go to state 45
    param                          shift and go to state 46
    epsilon                        shift and go to state 47

state 31

    (16) def_attr -> id colon . type
    (17) def_attr -> id colon . type larrow expr
    (19) def_attr -> id colon . error
    (21) def_attr -> id colon . error larrow expr
    (22) def_attr -> id colon . type larrow error

    type            shift and go to state 49
    error           shift and go to state 50


state 32

    (23) def_func -> id opar . formals cpar colon type ocur expr ccur
    (25) def_func -> id opar . error cpar colon type ocur expr ccur
    (26) def_func -> id opar . formals cpar colon error ocur expr ccur
    (27) def_func -> id opar . formals cpar colon type ocur error ccur
    (28) formals -> . param_list
    (29) formals -> . param_list_empty
    (30) param_list -> . param
    (31) param_list -> . param comma param_list
    (32) param_list -> . error param_list
    (33) param_list_empty -> . epsilon
    (34) param -> . id colon type
    (2) epsilon -> .

    error           shift and go to state 52
    id              shift and go to state 48
    cpar            reduce using rule 2 (epsilon -> .)

    formals                        shift and go to state 51
    param_list                     shift and go to state 44
    param_list_empty               shift and go to state 45
    param                          shift and go to state 46
    epsilon                        shift and go to state 47

state 33

    (7) def_class -> class type inherits type ocur . feature_list ccur semi
    (12) feature_list -> . epsilon
    (13) feature_list -> . def_attr semi feature_list
    (14) feature_list -> . def_func semi feature_list
    (15) feature_list -> . error feature_list
    (2) epsilon -> .
    (16) def_attr -> . id colon type
    (17) def_attr -> . id colon type larrow expr
    (18) def_attr -> . error colon type
    (19) def_attr -> . id colon error
    (20) def_attr -> . error colon type larrow expr
    (21) def_attr -> . id colon error larrow expr
    (22) def_attr -> . id colon type larrow error
    (23) def_func -> . id opar formals cpar colon type ocur expr ccur
    (24) def_func -> . error opar formals cpar colon type ocur expr ccur
    (25) def_func -> . id opar error cpar colon type ocur expr ccur
    (26) def_func -> . id opar formals cpar colon error ocur expr ccur
    (27) def_func -> . id opar formals cpar colon type ocur error ccur

    error           shift and go to state 18
    ccur            reduce using rule 2 (epsilon -> .)
    id              shift and go to state 19

    feature_list                   shift and go to state 53
    epsilon                        shift and go to state 15
    def_attr                       shift and go to state 16
    def_func                       shift and go to state 17

state 34

    (11) def_class -> class type inherits error ocur . feature_list ccur semi
    (12) feature_list -> . epsilon
    (13) feature_list -> . def_attr semi feature_list
    (14) feature_list -> . def_func semi feature_list
    (15) feature_list -> . error feature_list
    (2) epsilon -> .
    (16) def_attr -> . id colon type
    (17) def_attr -> . id colon type larrow expr
    (18) def_attr -> . error colon type
    (19) def_attr -> . id colon error
    (20) def_attr -> . error colon type larrow expr
    (21) def_attr -> . id colon error larrow expr
    (22) def_attr -> . id colon type larrow error
    (23) def_func -> . id opar formals cpar colon type ocur expr ccur
    (24) def_func -> . error opar formals cpar colon type ocur expr ccur
    (25) def_func -> . id opar error cpar colon type ocur expr ccur
    (26) def_func -> . id opar formals cpar colon error ocur expr ccur
    (27) def_func -> . id opar formals cpar colon type ocur error ccur

    error           shift and go to state 18
    ccur            reduce using rule 2 (epsilon -> .)
    id              shift and go to state 19

    feature_list                   shift and go to state 54
    epsilon                        shift and go to state 15
    def_attr                       shift and go to state 16
    def_func                       shift and go to state 17

state 35

    (8) def_class -> class error ocur feature_list ccur . semi

    semi            shift and go to state 55


state 36

    (10) def_class -> class error inherits error ocur . feature_list ccur semi
    (12) feature_list -> . epsilon
    (13) feature_list -> . def_attr semi feature_list
    (14) feature_list -> . def_func semi feature_list
    (15) feature_list -> . error feature_list
    (2) epsilon -> .
    (16) def_attr -> . id colon type
    (17) def_attr -> . id colon type larrow expr
    (18) def_attr -> . error colon type
    (19) def_attr -> . id colon error
    (20) def_attr -> . error colon type larrow expr
    (21) def_attr -> . id colon error larrow expr
    (22) def_attr -> . id colon type larrow error
    (23) def_func -> . id opar formals cpar colon type ocur expr ccur
    (24) def_func -> . error opar formals cpar colon type ocur expr ccur
    (25) def_func -> . id opar error cpar colon type ocur expr ccur
    (26) def_func -> . id opar formals cpar colon error ocur expr ccur
    (27) def_func -> . id opar formals cpar colon type ocur error ccur

    error           shift and go to state 18
    ccur            reduce using rule 2 (epsilon -> .)
    id              shift and go to state 19

    feature_list                   shift and go to state 56
    epsilon                        shift and go to state 15
